# spin-nomad-plugin

./: .gitignore  Cargo.toml  README.md  spin-pluginify.toml
.github/workflows/: build.yml  release.yml
.plugin-manifests/: generate-manifest.sh
src/: main.rs  nomad.rs  opts.rs
src/commands/: deploy.rs
src/templates/: app.nomad.hbs
