[package]
name = "nomad-plugin"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[workspace.package]
version = "0.1.0"
authors = [
  "Vaughn Dice <vaughn.dice@fermyon.com>",
  "Fermyon Engineering <engineering@fermyon.com>"
]
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "3.2.24", features = ["derive", "env"] }
handlebars = "3"
include_dir = "0.7.3"
lazy_static = "1.4.0"
oci-distribution = { git = "https://github.com/fermyon/oci-distribution", rev = "63cbb0925775e0c9c870195cad1d50ac8707a264" }
tokio = { version = "1.23", features = ["full"] }
tracing = { workspace = true }
regex = "1.5.4"
reqwest = { version = "0.11", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
spin-common = { git = "https://github.com/fermyon/spin", rev = "9672d74122e422cd8c65b8ea2381cfbe29b2389d" }
spin-http = { git = "https://github.com/fermyon/spin", rev = "9672d74122e422cd8c65b8ea2381cfbe29b2389d", default-features = false }
spin-loader = { git = "https://github.com/fermyon/spin", rev = "9672d74122e422cd8c65b8ea2381cfbe29b2389d" }
spin-locked-app = { git = "https://github.com/fermyon/spin", rev = "9672d74122e422cd8c65b8ea2381cfbe29b2389d" }
spin-oci = { git = "https://github.com/fermyon/spin", rev = "9672d74122e422cd8c65b8ea2381cfbe29b2389d" }
tempfile = "3.3.0"
url = "2.3"

[target.'cfg(target_os = "linux")'.dependencies]
# This needs to be an explicit dependency to enable
# '--features openssl/vendored', which is used for Linux releases.
openssl = { version = "0.10" }

[workspace.dependencies]
tracing = { version = "0.1", features = ["log"] }

[build-dependencies]
vergen = { version = "^8.2.1", default-features = false, features = [
  "build",
  "git",
  "gitcl",
  "cargo",
] }
